--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="twitter:card" content="summary" />
   <meta property="og:url" content="https://app.tanukizzan.com/hashtag-search" />
   <meta property="og:title" content="HashTag search" />
-  <meta property="og:description" content="いろいろなサイトで検索するのに便利なサイトです。" />
+  <meta property="og:description" content="ハッシュタグで検索するのに便利なサイトです。" />
   <meta property="og:image" content="https://app.tanukizzan.com/hashtag-search/images/hashtag.png" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css">
