--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       <button id="note">note</button>
       <button id="random">I'm Feeling Lucky</button>
     </div>
+
+    <p><a href="https://app.tanukizzan.com/ultimate-search/">
+      <span class="red">New!</span> #検索するならアルティメット <b>Ultimate search</b>
+    </a></p>
   </main>
 
   <footer>
